fix: scrollbar width

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 
 *::-webkit-scrollbar {
   background-color: white;
-  width: 0.5rem;
+  width: 0.75rem;
 
 }
 
